style: 💄 Add card styles

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -357,8 +357,27 @@ a {
   user-select: none;
 }
 .img-box-card-trip img {
-    border-bottom: 4px solid #267fd9;
+  border-bottom: 4px solid #267fd9;
 }
+.img-box-card-mario {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.img-box-card-mario img {
+  border-bottom: 4px solid #ff0021;
+}
+.img-box-card-calculadora  {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.img-box-card-calculadora img {
+  border-bottom: solid;
+  border-image: linear-gradient(to right, #090036e0, #4e0979d6,#ff00b5cd ) 1;
+}
+
+
 
 .icons-slide {
   display: flex;
