--- a/src/css/index.css
+++ b/src/css/index.css
@@ -475,11 +475,11 @@ a {
   }
 }
 
-@media only screen and (max-width: 440px) and (min-width: 290px) {
+@media (min-width: 290px) {
 
   .img-box-card img {
     border-bottom: 4px solid #2ed8e1;
-    width: 100%;
+    width: 220px;
     height: max-content;
     object-fit: fill;
   }
@@ -491,7 +491,7 @@ a {
   }
   .img-box-card-trip img {
     border-bottom: 4px solid #267fd9;
-    width:  100%;
+    width:  220px;
     height: max-content;
     object-fit: fill;
   }
