--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,8 +34,6 @@ body {
 }
 
 /* SCROLLBAR */
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
 * {
   scrollbar-width: auto;
   scrollbar-color: #bb86fc #f0e4fe;
@@ -60,13 +58,13 @@ textarea {
   resize: none;
   outline: none;
 }
-
-/*  */
-
+/* Page layout */
 .container {
-  padding: 70px;
+  padding: 50px;
   margin-top: 30px;
 }
+
+/* =============================== NAVBAR  ===============================*/
 .logo-letters {
   color: #dddddd;
   letter-spacing: -8px;
@@ -142,7 +140,7 @@ a {
   letter-spacing: 1px;
 }
 
-/* HOME */
+/*=============================== HOME ===============================*/
 .section-home {
   display: flex;
   justify-content: center;
@@ -173,7 +171,7 @@ a {
   letter-spacing: 3px;
 }
 
-/* icon bar fixed */
+/*=============================== SOCIALS FIXED BAR ===============================*/
 .icon-bar {
   position: fixed;
   bottom: 0;
@@ -214,7 +212,7 @@ a {
   text-orientation: upright;
 }
 
-/* SLIDE COROUSEL */
+/*=============================== SLIDE COROUSEL ===============================*/
 
 .blaze-slider.dragging .blaze-track {
   cursor: grabbing;
@@ -257,13 +255,11 @@ a {
   background: hsl(0deg, 0%, 15%);
   cursor: pointer;
   transition: transform 200ms ease, background-color 300ms ease;
-  
 }
 
 .blaze-pagination button.active {
   background: mediumpurple;
   transform: scale(1.3);
-  
 }
 /* arrow pagination slide */
 .blaze-next,
@@ -299,33 +295,6 @@ button.blaze-next {
   box-shadow: 4px 4px 13px #000000;
 }
 
-.preloader {
-  background: var(--background-color); /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #282828,
-    #242424,
-    var(--background-color)
-  );
-  background: linear-gradient(
-    to right,
-    #282828,
-    #242424,
-    var(--background-color)
-  );
-  display: flex;
-  align-items: center;
-  position: fixed;
-  height: 100vh;
-  margin-left: 20px;
-  justify-content: center;
-  transition: opacity 0.2s linear;
-  width: 100%;
-  z-index: 10;
-  opacity: 1;
-  transform: opacity 1s linear;
-}
-
 /* Slides Containers contents */
 .slide-box {
   display: flex;
@@ -356,7 +325,6 @@ button.blaze-next {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
- 
 }
 .info-box button {
   box-shadow: 4px 6px 9px #000000;
@@ -427,7 +395,7 @@ button.blaze-next {
   font-weight: 100;
 }
 
-/* CONTACT */
+/*=============================== CONTACT ===============================*/
 .contact-container {
   display: flex;
   flex-direction: column;
@@ -518,112 +486,4 @@ button.blaze-next {
 }
 .form-button:hover {
   color: var(--text-color);
-}
-
-/* loading icon */
-#loader {
-  left: 50%;
-  top: 50%;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #913bfa;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-#loader:before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  right: 5px;
-  bottom: 5px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #bb86fc;
-  -webkit-animation: spin 3s linear infinite;
-  animation: spin 3s linear infinite;
-}
-#loader:after {
-  content: "";
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #f0e4fe;
-  -webkit-animation: spin 1.5s linear infinite;
-  animation: spin 1.5s linear infinite;
-}
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@media (max-width: 480px) {
-  .img-box-card img {
-    border-bottom: 4px solid #2ed8e1;
-    width: 270px;
-    height: max-content;
-    object-fit: fill;
-  }
-  .img-box-card-trip {
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  .img-box-card-trip img {
-    border-bottom: 4px solid #267fd9;
-    width: 270px;
-    height: max-content;
-    object-fit: fill;
-  }
-
-  .img-box-card-mario {
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  .img-box-card-mario img {
-    border-bottom: 4px solid #ff0021;
-    width: 270px;
-    height: max-content;
-    object-fit: fill;
-  }
-  .img-box-card-calculadora {
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  .img-box-card-calculadora img {
-    border-bottom: 4px solid;
-    border-image: linear-gradient(to right, #090036e0, #4e0979d6, #ff00b5cd) 1;
-     width: 270px;
-    height: max-content;
-    object-fit: fill;
-  }
 }
